# proc-sim

./: CMakeLists.txt  README.md
src/: ALU.h  Assembler.h  Bus.h  CLI.h  CPU.h  Call.h  Connect.h  Counter.h  Empty.h  Exceptions.h  Flags.h  ICallable.h  IClearable.h  IElement.h  ISignal.h  InstructionRegister.h  JSON.h  MUX.h  Maszyna.h  OpSet.h  Operation.h  OperationBus.h  RAM.h  Register.h  UI.h  main.cpp  opCommon.h  opCond.h  opLine.h  opNode.h
src/GUI/: AssemblerView.h  Block.h  Button.h  ButtonBar.h  ColorScheme.h  Console.h  Editor.h  Field.h  FileView.h  GUI.h  IClickable.h  IDrawable.h  ILightable.h  IPopUp.h  IScrollable.h  IWidget.h  Label.h  Link.h  List.h  MaszynaFrame.h  MaszynaFrameConfigurator.h  Node.h  PopUpButtonTest.h  PopUpFileInput.h  PopUpNumberInput.h  PopUpOperationInput.h  PopUpSelectString.h  PopUpWarning.h  SFX.h  TitleBar.h
